--- a/templates/check_point.html
+++ b/templates/check_point.html
@@ -4,70 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment Results</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
-        
-        h1 {
-            text-align: center;
-            color: #4CAF50;
-            margin-top: 30px;
-            font-size: 2.5em;
-        }
-
-        table {
-            width: 80%;
-            margin: 30px auto;
-            border-collapse: collapse;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            background-color: #fff;
-        }
-
-        th, td {
-            padding: 12px 15px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #4CAF50;
-            color: white;
-            font-size: 1.2em;
-        }
-
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-
-        td {
-            font-size: 1em;
-        }
-
-        @media (max-width: 768px) {
-            table {
-                width: 100%;
-            }
-
-            th, td {
-                font-size: 0.9em;
-                padding: 10px;
-            }
-        }
-    </style>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/points.css' %}">
+    <link rel="stylesheet" href="{% static 'css/side.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-
+    <div class="sidebar">
+        <h3>Hello Admin</h3>
+        <ul>
+          <li><a href="{% url 'check_point' %}"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+          <li><a href="{% url 'manage_buildings' %}"><i class="fas fa-building"></i> Manage Buildings</a></li>
+          <li><a href="{% url 'view_all_preferences' %}"><i class="fas fa-list-alt"></i> View Preferences</a></li>
+          <li><a href="{% url 'view_all_users' %}"><i class="fas fa-users"></i> View Users</a></li>
+        </ul>
+      </div>
     <h1>Assignment Results</h1>
-
     <table>
         <tr>
             <th>Name</th>
